--- a/company/app/scripts/components/contactList/tpl-contact-list.html
+++ b/company/app/scripts/components/contactList/tpl-contact-list.html
@@ -1,16 +1,23 @@
 <ng-form name="contactListCtrl.contactListForm">
     <div class="row">
-        <input type="checkbox" id="contactValid" name="contactRolesValid" ng-show="false"
+        <cmp-error-summary form-ref="contactListCtrl.contactListForm" show-errors="contactListCtrl.showSummary"
+                           name-suffix="contactListCtrl.contactListForm" alias-list="contactListCtrl.alias"
+                           exclusion-list="contactListCtrl.exclusions"
+                           update-errors="contactListCtrl.updateSummary" form-preamble="CONTACT_INFO"
+                           set-heading-level="h4"></cmp-error-summary>
+    </div>
+    <div>
+        <input type="checkbox" id="contactRolesValid_{{::$id}}" name="contactRolesValid_{{::$id}}" ng-show="false"
                ng-model="contactListCtrl.allRolesSelected" required/>
         <label>
-            <strong id=" contactNum-role-error" class="error" ng-if="contactListCtrl.showError()">
-                        <span class="label label-danger"
-                              ng-messages="contactListCtrl.contactListForm.contactRolesValid.$error">
-                            <span ng-message="required">{{"MSG_ERR_ALLROLE"|translate}}</span>
-                        </span>
-            </strong>
+            <!-- <strong id=" contactNum-role-error" class="error" ng-if="contactListCtrl.showError()">
+                         <span class="label label-danger"
+                               ng-messages="contactListCtrl.contactListForm.contactRolesValid.$error">
+                             <span ng-message="required">{{"MSG_ERR_ALLROLE"|translate}}</span>
+                         </span>
+             </strong>-->
         </label>
-        <cmp-expanding-table list-items="contactListCtrl.contactList"
+        <cmp-expanding-table list-items="contactListCtrl.contactList" transclude-name="companyContact"
                              reset-to-collapsed="contactListCtrl.resetCollapsed"
                              column-def="contactListCtrl.columnDef" select-record="contactListCtrl.selectRecord"
                              disable-selection="!contactListCtrl.isDetailValid">
@@ -19,7 +26,9 @@
                                 on-update="contactListCtrl.onUpdateContactRecord(contact)"
                                 contact-record="$parent.record" record-index="$parent.$index"
                                 is-amend="contactListCtrl.formAmend"
+                                error-summary-update="contactListCtrl.updateErrorSummaryState()"
                                 is-role-selected="contactListCtrl.isREPRoleSelected(roleName,id)"
+                                show-error-summary="contactListCtrl.showSummary"
                                 is-detail-valid="contactListCtrl.setValid(state)">
             </cmp-contact-record>
 
@@ -27,16 +36,15 @@
     </div>
     <div class="row mrgn-tp-md mrgn-bttm-lg">
         <div class="btn-group-sm col-md-12 text-right">
-            <button name="addContact" class="btn btn-primary"
-                   ng-click="contactListCtrl.addContact()" ng-disabled="contactListCtrl.disableAddContact()">
+            <button name="addContact" class="btn btn-primary" id="addContact_{{::$id}}"
+                    ng-click="contactListCtrl.addContact()" ng-disabled="contactListCtrl.disableAddContact()">
                 {{'ADD_REPRES'|translate}}
             </button>
             <button class="btn btn-default"
-                   data-ng-show="contactListCtrl.newContactFormShow"
-                   ng-click="contactListCtrl.newAdrFormShow=false">
+                    data-ng-show="contactListCtrl.newContactFormShow"
+                    ng-click="contactListCtrl.newAdrFormShow=false">
                 {{'CANCEL'|translate}}
             </button>
         </div>
     </div>
-
 </ng-form>
