--- a/company/app/scripts/components/companyMain/tpl-company-main.html
+++ b/company/app/scripts/components/companyMain/tpl-company-main.html
@@ -14,15 +14,15 @@
             <div class="panel-body">
                 <div uib-alert template-url="./app/lib/uib-templates/alert.html" ng-if="main.alerts[0]"
                      class="alert-info" close="main.closeAlert(0)">
-                    <section>
-                        <div>
-                            <h3 class="rep-margin-minus-top">Files to load</h3>
-                            <ul>
-                                <li>Working Copy (.hcsc) – when continuing with an incomplete company template.</li>
-                                <li>Final XML – when amending an approved company enrolment.</li>
-                                <li>A file should not be loaded if it is the initial enrolment for company.</li>
-                            </ul>
-                        </div>
+                    <section aria-live="assertive">
+                        <section aria-live="assertive">
+                            <div ng-if="!main.isFrench()"
+                                 ng-include="'app/scripts/templates/company/tpl-company-file-en.html'">
+                            </div>
+                            <div ng-if="main.isFrench()"
+                                 ng-include="'app/scripts/templates/company/tpl-company-file-fr.html'">
+                            </div>
+                        </section>
                     </section>
                 </div>
                 <div class="col-md-12">
@@ -33,6 +33,13 @@
             <div>
             </div>
         </section>
+        <div id="master-error">
+            <cmp-error-summary form-ref="main.companyEnrolForm" show-errors="main.showErrorSummary"
+                               form-preamble="COMPANY_FORM" exclusion-list="main.exclusions"
+                               alias-list="main.alias"
+                               update-errors="main.updateSummary" make-focused="main.updateSummary"
+                               name-suffix="main.companyEnrolForm" set-heading-level="h2"></cmp-error-summary>
+        </div>
         <div>
             <section class="panel panel-primary mrgn-tp-lg">
                 <header class="panel-heading clearfix">
@@ -47,25 +54,12 @@
                 <div class="panel-body">
                     <div uib-alert template-url="./app/lib/uib-templates/alert.html" ng-if="main.alerts[1]"
                          class="alert-info" close="main.closeAlert(1)">
-                        <section>
-                            <div>
-                                <ul>
-                                    <li>
-                                        The “<b>Application Status</b>”, “<b>Enrolment Version</b>”, and “<b>Date Last
-                                        Saved</b>” fields are automatically filled by the form upon selecting “<b>Save
-                                        Working Copy</b>” or “<b>Save Draft for Filing</b>” in the bottom of the
-                                        template.
-                                    </li>
-                                    <li>
-                                        The “<b>Company Id</b>” field will be filled by Health Canada when generating
-                                        final xml file.
-                                    </li>
-                                    <li>
-                                        The “<b>Amend Enrolment</b>” button must be selected when amending an approved
-                                        company enrolment. Load the approved final xml file in the template to enable
-                                        the “Amend Enrolment” button.
-                                    </li>
-                                </ul>
+                        <section aria-live="assertive">
+                            <div ng-if="!main.isFrench()"
+                                 ng-include="'app/scripts/templates/company/tpl-company-enrolment-en.html'">
+                            </div>
+                            <div ng-if="main.isFrench()"
+                                 ng-include="'app/scripts/templates/company/tpl-company-enrolment-fr.html'">
                             </div>
                         </section>
                     </div>
@@ -87,68 +81,20 @@
                             <div class="panel-body">
                                 <div uib-alert template-url="./app/lib/uib-templates/alert.html" ng-if="main.alerts[3]"
                                      class="alert-info" close="main.closeAlert(3)">
-                                    <section>
-                                        <div>
-                                            <h4 class="rep-margin-minus-top">Address Information</h4>
-                                            <ul>
-                                                <li>A minimum of one address is required for the company template.</li>
-                                                <li>There must be an address associated with each of the following three
-                                                    roles:
-                                                    “Manufacturer / Sponsor Mailing Address”, “Billing Address”, and
-                                                    “Regulatory Mailing / Annual Contact”.
-                                                </li>
-                                                <li>
-                                                    A single address may be provided for multiple roles, however, each
-                                                    role must be associated to only one address.
-                                                </li>
-                                                <li>
-                                                    A “Canadian Importer Mailing Address” is required if a country other
-                                                    than Canada is selected for the “Manufacturer / Sponsor Mailing
-                                                    Address”. Although it does not need to be provided at the time of
-                                                    company enrolment, a Canadian Importer Mailing Address must be
-                                                    identified prior to the product entering the market, by amending
-                                                    your company enrolment.
-                                                </li>
-                                            </ul>
-                                            <h4>Description of Roles</h4>
-                                            <ul>
-                                                <li>
-                                                    “Manufacturer / Sponsor Information”: Refers to the name to
-                                                    which the drug submission is filed and, where a Drug
-                                                    Identification Number (DIN) / Notice of Compliance (NOC) is to
-                                                    be issued, the company in whose name the DIN / NOC will be
-                                                    registered, (i.e., the DIN / NOC owner) and the name to be
-                                                    included on the product label and Product Monograph / Package
-                                                    Insert.
-                                                </li>
-                                                <li>
-                                                    “Regulatory Mailing / Annual Contact”: pertains to where and to
-                                                    whom Health Canada should direct regulatory mail <b>other than
-                                                    correspondence specific to the subject drug submission</b>, e.g.
-                                                    annual notification, regulatory / policy amendment notices as
-                                                    they apply to DINs registered to the manufacturer/sponsor.
-                                                    Operational and system requirements dictate that the regulatory
-                                                    mailing name/address must be the same for all DINs registered to
-                                                    the manufacturer / sponsor identified where more than one DIN is
-                                                    held by that company.
-                                                </li>
-                                                <li>
-                                                    “Canadian Importer”: is responsible for the sale of this product in
-                                                    Canada. Must
-                                                    be provided only if the address of the manufacturer / sponsor
-                                                    identified is NOT
-                                                    located in Canada.
-                                                </li>
-                                                <li>
-                                                    “Billing Address” – To whom the invoice is to be sent.
-                                                </li>
-                                            </ul>
+                                    <section aria-live="assertive">
+                                        <div ng-if="!main.isFrench()"
+                                             ng-include="'app/scripts/templates/company/tpl-company-address-en.html'">
+                                        </div>
+                                        <div ng-if="main.isFrench()"
+                                             ng-include="'app/scripts/templates/company/tpl-company-address-fr.html'">
                                         </div>
                                     </section>
                                 </div>
                                 <cmp-company-address-list addresses="main.company.addressList"
                                                           get-new-address="main.getNewAddress()"
                                                           is-amend="main.formAmendType"
+                                                          error-summary-update="main.updateSummary"
+                                                          show-error-summary="main.showErrorSummary"
                                                           company-service="main.companyService"></cmp-company-address-list>
                             </div>
                         </section>
@@ -166,71 +112,20 @@
                             <div class="panel-body">
                                 <div uib-alert template-url="./app/lib/uib-templates/alert.html" ng-if="main.alerts[4]"
                                      class="alert-info" close="main.closeAlert(4)">
-                                    <section>
-                                        <div>
-                                            <h4 class="rep-margin-minus-top">Company Representative Information</h4>
-                                            <ul>
-                                                <li>
-                                                    A minimum of one company representative is required for the company
-                                                    template
-                                                </li>
-                                                <li>
-                                                    There must be a company representative associated with each of the
-                                                    following
-                                                    roles: “Manufacturer / Sponsor Mailing Address”, “Billing Address”,
-                                                    “Regulatory
-                                                    Mailing / Annual Contact” and “Primary REP contact”
-                                                </li>
-                                                <li>
-                                                    A single contact may be provided for multiple roles, however, each
-                                                    role must be
-                                                    associated to only one contact.
-                                                </li>
-                                                <li>
-                                                    The Primary REP contact is the person to be contacted by Health
-                                                    Canada if there
-                                                    are any issues or clarifications required for this template when it
-                                                    is submitted
-                                                    for approval.
-                                                </li>
-                                                <li>
-                                                    Sponsors may choose to provide an Alternate REP contact, however
-                                                    this is not a
-                                                    requirement.
-                                                </li>
-                                            </ul>
-                                            <h4>Description of Roles</h4>
-                                            <ul>
-                                                <li>
-                                                    “Manufacturer / Sponsor Information”: Refers to the name to
-                                                    which the drug submission is filed and, where a Drug
-                                                    Identification Number (DIN) / Notice of Compliance (NOC) is to
-                                                    be issued, the company in whose name the DIN / NOC will be
-                                                    registered, (i.e., the DIN / NOC owner) and the name to be
-                                                    included on the product label and Product Monograph / Package
-                                                    Insert.
-                                                </li>
-                                                <li>
-                                                    “Regulatory Mailing / Annual Contact”: pertains to where and to
-                                                    whom Health Canada should direct regulatory mail <b>other than
-                                                    correspondence specific to the subject drug submission</b>, e.g.
-                                                    annual notification, regulatory / policy amendment notices as
-                                                    they apply to DINs registered to the manufacturer/sponsor.
-                                                    Operational and system requirements dictate that the regulatory
-                                                    mailing name/address must be the same for all DINs registered to
-                                                    the manufacturer / sponsor identified where more than one DIN is
-                                                    held by that company.
-                                                </li>
-                                                <li>
-                                                    “Billing Address” – To whom the invoice is to be sent.
-                                                </li>
-                                            </ul>
+                                    <section aria-live="assertive">
+                                        <div ng-if="!main.isFrench()"
+                                             ng-include="'app/scripts/templates/company/tpl-company-contact-en.html'">
+                                        </div>
+                                        <div ng-if="main.isFrench()"
+                                             ng-include="'app/scripts/templates/company/tpl-company-contact-fr.html'">
                                         </div>
                                     </section>
                                 </div>
                                 <cmp-company-contact-list contacts="main.company.contactList"
                                                           get-new-contact="main.getNewContact()"
                                                           is-amend="main.formAmendType"
+                                                          error-summary-update="main.updateSummary"
+                                                          show-error-summary="main.showErrorSummary"
                                                           company-service="main.companyService"></cmp-company-contact-list>
                             </div>
                         </section>
@@ -244,7 +139,7 @@
                     </button>
                 </div>
                 <div class="form-group col-md-3">
-                    <button class="btn btn-primary btn-lg active" ng-disabled="main.disableXML" id="btn_xmlSave"
+                    <button class="btn btn-primary btn-lg active" id="btn_xmlSave" ng-disabled="main.disableDraftButton"
                             ng-click="main.saveXML()">{{main.saveXMLLabel |translate}}
                     </button>
                     <button title="{{'SAVE_INSTRUCT'|translate}}" class="btn rep-help-button-primary btn-xs"
@@ -259,15 +154,12 @@
                     <div uib-alert template-url="./app/lib/uib-templates/alert.html" ng-if="main.alerts[2]"
                          class="alert-info" close="main.closeAlert(2)">
                         <section aria-live="assertive">
-                            <div>
-                                <ul>
-                                    <li>Click the "Save Draft for Filing" button to generate the draft XML file.</li>
-                                    <li>Submit the created file to Health Canada using the Common Electronic Submission
-                                        Gateway (CESG).
-                                    </li>
-                                    <li>Refer to the REP guidance document for detailed information.</li>
-                                </ul>
-                            </div>
+                                <div ng-if="!main.isFrench()"
+                                     ng-include="'app/scripts/templates/company/tpl-company-save-en.html'">
+                                </div>
+                                <div ng-if="main.isFrench()"
+                                     ng-include="'app/scripts/templates/company/tpl-company-save-fr.html'">
+                                </div>
                         </section>
                     </div>
                 </div>
